NM-1869 - Chunk of fixes for Intel
- NM-2779 - [Activity Feed] Click on activity about project which has been removed will 500 page
- NM-2764 -  When I open Activity Feed all field to comment are open
- NM-2754 - [My Projects][Edit Project] Problem when we add more than two pictures
- NM-2761 - Activity feed comment form incorrect avatar size
- NM-2766 - Revise see more button
- NM-2281 - Finished refactoring Activity Feed proposed by @Slashek;
- NM-2778 - Follow / Join via JS and refreshing counters;
- NM-2796 - [Admin panel][Projects][Topics] in edit topic is problem with style on layout
- NM-2775 - Outline issues on tabs after selecting role on search;
- NM-2780 - Thumbnails are broken on staging
- NM-2921 - Activity feed comments are duplicated
- NM-2861 - Public Profile > Following Tab - Counter does not get updated when you unfollow something
- NM-2862 - Public Profile > Following Tab > People/Projects/Topics - UI does not get updated when you unfollow something

--- a/app/community_views/activity_feed/follow_and_unfollow.js.erb
+++ b/app/community_views/activity_feed/follow_and_unfollow.js.erb
@@ -6,4 +6,6 @@
         .attr('href', updated.attr('href'))
         .data('method', updated.data('method'))
         .html(updated.html());
+
+    btn.parent().parent().find("[data-followers-count]").html(parseInt("<%= @followers_count %>"));
 }());
