--- a/app/community_views/layouts/community.html.haml
+++ b/app/community_views/layouts/community.html.haml
@@ -3,7 +3,7 @@
 
   = render 'shared/head'
 
-  %body
+  %body{class: body_classes}
     .root-a
       .wrap
         %header#top.top-a
@@ -11,7 +11,7 @@
             .contain
               %h1.logo
                 = link_to root_url, accesskey: 'h' do
-                  = image_tag "intel/logo-white.png", width: 59, height: 39, alt: 'Intel'
+                  = image_tag "intel/logo-white.png", width: 59, height: 39, alt: current_instance.name
                   = t :developer_mesh
 
               = render 'shared/topnav' unless @omit_topnav
