--- a/app/community_views/shared/_listing_projects.html.haml
+++ b/app/community_views/shared/_listing_projects.html.haml
@@ -8,5 +8,6 @@
         = render 'shared/project', project: project
 
   / more
-  %p.more-a{:'data-see-more' => true, :'data-see-more-type' => see_more_type}
-    = link_to t(:see_more), see_more_route, remote: true
+  - if projects.next_page
+    %p.more-a{:'data-see-more' => true, :'data-see-more-type' => see_more_type}
+      = link_to t(:see_more), see_more_route, remote: true
