--- a/app/views/instance_admin/projects/topics/_form.html.haml
+++ b/app/views/instance_admin/projects/topics/_form.html.haml
@@ -4,7 +4,7 @@
       = f.input :name, input_html: { class: 'form-control' }
   .row
     .input-container.col-xs-12
-      = f.input :featured, input_html: { class: 'form-control' }
+      = f.input :featured, input_html: { class: 'checkbox' }
   .row
     .input-container.col-xs-12
       = f.input :description,  :as => :ckeditor, input_html: { class: 'form-control' }
