--- a/app/views/dashboard/company/transactables/_form.html.haml
+++ b/app/views/dashboard/company/transactables/_form.html.haml
@@ -117,12 +117,12 @@
         - category = @transactable_type.categories.roots.where(name: category_name).first
         = render partial: 'shared/category', locals: { category: category, f: f, categorizable: @transactable_type }
       - when 'confirm_reservations'
-        = f.input :confirm_reservations, as: :bootstrap_switch
+        = f.input :confirm_reservations, as: :bootstrap_switch, required: f.object.required?(:confirm_reservations)
       - else
         - if custom_attribute_names.include?(field)
           = draw_attribute_for_form(@transactable_type.custom_attributes.find_by(name: field), properties_form)
         -elsif f.object.attributes.include?(field)
-          = f.input field
+          = f.input field, required: f.object.required?(field)
 .hidden
   - Money::Currency.table.values.each do |c|
     %span{:id => "currency_#{c[:iso_code]}"}
