--- a/app/views/search/list.html.haml
+++ b/app/views/search/list.html.haml
@@ -7,7 +7,7 @@
   = render 'search/list_results'
 - else
   .span3{"data-search-filters-container" => true}
-    %section#category-tree
+    %section#category-tree.list-view-category-tree
       - cache i18n_cache_key(@searcher.transactable_type, @searcher.category_ids) do
         - @searcher.searchable_categories.each do |category|
           .nav-categories.collapse.in
