--- a/app/community_views/shared/_follow_button.html.haml
+++ b/app/community_views/shared/_follow_button.html.haml
@@ -2,7 +2,7 @@
 - global_options = { class: "button-a #{css_class}" }
 
 - if user_signed_in?
-  - options = { remote: true, method: current_user.feed_follow_http_method(object)}.merge(global_options)
+  - options = { remote: true, data: { "object-id": object.id }, method: current_user.feed_follow_http_method(object)}.merge(global_options)
 
   = link_to current_user.feed_follow_term(object), current_user.feed_follow_url(object), options
 - else
