--- a/app/assets/stylesheets/intel/modules/_user-header.scss
+++ b/app/assets/stylesheets/intel/modules/_user-header.scss
@@ -6,13 +6,26 @@
     background: #fff;
 
     > .bg {
+        position: relative;
         height: 285px;
         margin: 0;
         background: image-url('intel/user-a-bg-a.jpg') 50% 0 no-repeat;
         background-size: cover;
+
+        &:before {
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            content: "";
+            background: linear-gradient(transparent, rgba(0,0,0,0.1));
+        }
     }
 
-    > .contain {}
+    > .contain {
+        position: relative;
+    }
 
     .header {
         height: 130px;
@@ -54,12 +67,18 @@
         font-size: 30px;
         line-height: 1;
         font-weight: bold;
-        text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+
+        .no-cssgradients & {
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+        }
     }
 
     .header p {
         margin-bottom: 5px;
         font-size: 18px;
+        .no-cssgradients & {
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+        }
     }
 
     .header .location:before {
