--- a/app/views/instance_admin/theme/pages/_form.html.haml
+++ b/app/views/instance_admin/theme/pages/_form.html.haml
@@ -2,6 +2,15 @@
   .row
     .input-container.col-xs-12
       = f.input :path, :placeholder => 'Page title', input_html: { class: 'form-control' }
+
+  .row
+    .input-container.col-xs-12
+      - slug_value = resource.extension.present? ? "#{resource.slug}.#{resource.extension}" : resource.slug
+      = f.input :slug, :placeholder => 'Page URL', input_html: { class: 'form-control', disabled: resource.id.present?, value: slug_value }
+
+  .row
+    .input-container.col-xs-12
+      = f.input :no_layout, as: :boolean
   .row
     .input-container.col-xs-12
       = f.input :content, input_html: { class: 'form-control', rows: "20" }
