--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -1,3 +1,6 @@
+- title @page.metadata_title.presence || @page.path
+- meta_description @page.metadata_meta_description.presence || truncate(strip_tags(@page.html_content.squish), length: 150)
+
 = content_for :hero do
   = image_tag(@page.hero_image.url) if @page.hero_image.present?
 %style
