NM-2871-incompatible-character-encodings-from-raygun
* attempted fix

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,7 +25,7 @@
       %meta{:name => "robots", "content" => "noindex, nofollow"}/
     = inject_content_holder('HEAD')
 
-    = render 'social/social_meta_tags'
+    = render 'social/social_meta_tags' rescue ''
 
     = yield(:meta)
     = csrf_meta_tag
