--- a/app/views/layouts/dashboard.html.haml
+++ b/app/views/layouts/dashboard.html.haml
@@ -23,7 +23,7 @@
     %meta{:content => "black", :name => "apple-mobile-web-app-status-bar-style"}/
     %meta{:content => "chrome=IE7", "http-equiv" => "X-UA-Compatible"}/
 
-    = render 'social/social_meta_tags'
+    = render 'social/social_meta_tags' rescue ''
 
     = yield(:meta)
     = csrf_meta_tag
