--- a/app/views/social/_social_meta_tags.html.haml
+++ b/app/views/social/_social_meta_tags.html.haml
@@ -6,6 +6,7 @@
   - s_image_url = defined?(site_image_url) ? site_image_url : platform_context.theme.hero_image.url
 
   - local_variables = { site_name: s_name, current_url: c_url, description: desc, site_title: s_title,  site_image_url: s_image_url }
+  - local_variables.each { |k,v| v.force_encoding("UTF-8") }
 
   = render partial: 'social/facebook', locals: local_variables rescue '' # trying to silent encoding issue...
   = render partial: 'social/gplus', locals: local_variables
