--- a/app/community_views/projects/show.html.haml
+++ b/app/community_views/projects/show.html.haml
@@ -3,7 +3,7 @@
     / project header
     .project-a
       %figure
-        = image_tag @project.cover_photo.image_url(:project_cover), width: PhotoUploader.dimensions[:project_cover][:width], height: PhotoUploader.dimensions[:project_cover][:height], alt: @project.name
+        = image_tag @project.cover_photo.image_url(:project_cover), alt: @project.name
         - if @project.featured?
           %figcaption
             = t :featured
